@@ -4,6 +4,8 @@ license = Perl_5
 copyright_holder = Torsten Raudssus
 copyright_year   = 2011
 
+[@GETTY]
+
 [Prereqs]
 Moose = 1.24
 MooseX::Types = 0.25
@@ -12,5 +14,3 @@ MooseX::Types = 0.25
 Test::More = 0.90
 Test::Dirs = 0.03
 File::Temp = 0.22
-
-[@GETTY]
