@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+	- Implemented Text::Zilla::Role::Stash (only tested with ::File::TT)
 	- Implemented Text::Zilla::Dir::FromHash
 
 0.002     2011-03-11 17:01:59 Europe/Berlin
